Fix social z-index

--- a/syro/css/index.css
+++ b/syro/css/index.css
@@ -88,6 +88,7 @@ ul#social {
     position: absolute;
     bottom: 0px;
     right: 0px;
+    z-index: 999;
 }
 ul#social li {
     display: block;
